# AA-types-example

api/: backend.py  frontend.ts
backend/: pyproject.toml
backend/src/: __init__.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  main.tsx  store.ts
