[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.3",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.387",
    "ruff>=0.7.2",
]

[tool.pyright]
pythonVersion = "3.9"
strict = ["*"]
